# bleep-ai

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  Taskfile.yml  build.rs  claude-wrapper.sh  cog.toml  deny.toml  install.sh  rustfmt.toml  spam-claude.sh  test-redaction.sh
.githooks/: commit-msg
.github/: pull_request_template.md  secret_scanning.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  prune-caches.yml  release.yml
.zed/: settings.json
apps/menu-bar/: .gitignore  README.md  run-dev.sh
apps/menu-bar/src-tauri/: Cargo.toml  tauri.conf.json
apps/menu-bar/src-tauri/capabilities/: default.json
apps/menu-bar/src-tauri/src/: main.rs
apps/menu-bar/ui/: app.js  globals.d.ts  index.html  jsconfig.json  style.css
crates/bleep-events/: Cargo.toml
crates/bleep-events/bindings/: CategoryCount.ts  ProxyEvent.ts  RedactedEntry.ts  RedactedPage.ts  RedactedRow.ts  RuleCount.ts  Summary.ts
crates/bleep-events/src/: lib.rs
docs/: ARCHITECTURE.md  ENDPOINTS.md  OPERATIONS.md  RULE-PIPELINE.md  TEST-DATA.md
docs/analysis/: CURATED-MANIFEST.md  DETECT-SECRETS-PORT-ANALYSIS.md  FALSE-POSITIVE-ASSESSMENT.md  LICENSE-AUDIT.md  OVERLAP-REPORT.md  REGEX-COMPAT-REPORT.md  SOURCE-QUALITY.md
docs/arch/: BUILD-PIPELINE.md  CONTENT-ROUTING.md  DETECTION-PIPELINE.md  FAKE-GENERATORS.md  OCR-EXTENSIBILITY.md  PROXY-INTEGRATION.md  REPLACEMENT-PIPELINE.md  SAFETY-INVARIANTS.md
docs/benchmarks/: FALSE-POSITIVE-RESULTS.md  PERFORMANCE-BUDGET.md  THROUGHPUT-RESULTS.md
docs/bleep/02-technical/: technical-architecture.md
docs/bleep/05-diagrams/: technical-mermaid.md
docs/schema/: INTERNAL-SCHEMA.md  MAP-GITLEAKS.md  MAP-NOSEY-PARKER.md  MAP-SECRETS-PATTERNS-DB.md  REPLACEMENT-TYPES.md
fixtures/: fake_person_data.txt
rules/: EXCLUSIONS.yaml  combined-100.yaml  combined.yaml  custom.yaml  patterns-test-fixtures.yaml  sensitive-patterns.yaml
scripts/: eval-classify.py  eval-missed-redactions.py  eval-stream.py  extract-cert.sh  install-git-hooks.sh  install.sh  test-installer.sh
src/: ca.rs  devmode.rs  dictionary.rs  event_bus.rs  hudsucker.rs  lib.rs  logging.rs  main.rs  perf.rs  proxy.rs  regex_patterns.rs  request_logger.rs  rule_pipeline.rs  stats_server.rs  streaming_deanon.rs
src/content_router/: audit.rs  headers.rs  json.rs  mod.rs  multipart.rs  plain.rs  sse.rs  tests.rs  urlencoded.rs
src/detection/: mod.rs  types.rs
src/patterns/: mod.rs
src/replacement/: mod.rs  replacers.rs  types.rs
src/stats/: mod.rs
src/types/: app.rs  mod.rs  rule.rs
tests/: build_pipeline.rs  content_router_invariants.rs  prefix_preservation_e2e.rs  replacement_integration.rs
tests/fixtures/: gitleaks_snippet.toml  np_snippet.yaml  spdb_snippet.yaml
