[package]
name = "bleep-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
hyper = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt"] }
tracing-appender = "0.2"
futures-util = "0.3.32"
bytes = "1.11.1"
fs_extra = "1.3.0"
serde-jsonlines = "0.7.0"
hudsucker = "0.24.0"
http = "1"
http-body-util = "0.1.3"
aho-corasick = "1"
regex = "1"
serde_yml = "0.0.12"
flate2 = "1"
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
base64 = "0.22"
url = "2"
fpe = "0.6"
aes = "0.8"
toml = "0.8"
rayon = "1.12.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }

[[bin]]
name = "bleep-tui"
path = "src/bin/tui.rs"

[[bin]]
name = "build-rules"
path = "src/bin/build-rules.rs"

[dev-dependencies]
tempfile = "3"
