[package]
name = "bleep-gateway"
version = "0.1.0"
edition = "2024"
description = "Local redaction proxy that scrubs secrets and PII from LLM API traffic before it leaves your machine"
license = "MIT"
repository = "https://github.com/tanguc/bleep-ai"
authors = ["Sergen Tanguc"]
readme = "README.md"

# Workspace: gateway crate + shared bleep-events crate. The Tauri menu-bar
# crate stays excluded (different dep tree, independent Cargo.lock); it
# pulls bleep-events as a path dep instead.
[workspace]
members = ["crates/bleep-events"]
exclude = ["apps/menu-bar/src-tauri"]

[dependencies]
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4.5", features = ["derive", "env"] }
hyper = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
futures-util = "0.3.32"
bytes = "1.11.1"
fs_extra = "1.3.0"
serde-jsonlines = "0.7.0"
hudsucker = "0.24.0"
# direct dep for per-install MITM CA generation (src/ca.rs). pinned to the same
# 0.14 line hudsucker re-exports so the rcgen types unify to one instance.
rcgen = "0.14"
hyper-rustls = { version = "0.27", default-features = false, features = ["webpki-roots", "http1", "http2", "aws-lc-rs", "tls12"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1.3"
aho-corasick = "1"
regex = "1"
serde_yml = "0.0.12"
flate2 = "1"
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
base64 = "0.22"
url = "2"
fpe = "0.6"
aes = "0.8"
toml = "0.8"
rayon = "1.12.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
libc = "0.2.186"
bleep-events = { path = "crates/bleep-events" }
tempfile = "3"

[[bin]]
name = "bleep-tui"
path = "src/bin/tui.rs"

[[bin]]
name = "build-rules"
path = "src/bin/build-rules.rs"

[[bin]]
name = "curate-rules"
path = "src/bin/curate-rules.rs"

[dev-dependencies]
tempfile = "3"
tower = "0.5.3"

# Patched hudsucker — defaults to port 443 in the CONNECT pass-through path
# when the parsed authority lacks a port (bun/undici quirk). Drop once
# https://github.com/omjadas/hudsucker/pull/184 is merged and released.
[patch.crates-io]
hudsucker = { git = "https://github.com/tanguc/hudsucker.git", tag = "0.24.0+bleep.1" }
