[package]
name = "bleep-menu-bar"
version = "0.1.0"
edition = "2021"
description = "Bleep menu-bar dashboard — live redaction stats in the macOS menu bar"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
